structure et charte couleur pour le css

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <!--<script src="/node_modules/@kevinbalicot/custom-element/dist/custom-element.min.js" charset="utf-8"></script>-->
     <script src="https://github.com/kevinbalicot/custom-element/releases/download/v1.1.0/custom-element.min.js"></script>
     <script src="/dist/app.js"></script>
+
+    <link href="/css/main.css" rel="stylesheet">
 </head>
 <body>
+    <h1>Test</h1>
     <beer-app></beer-app>
-</body>
+</body> 
 </html>
