mise en place structure homepage + ajout du scss au projet

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <script src="https://github.com/kevinbalicot/custom-element/releases/download/v1.1.0/custom-element.min.js"></script>
     <script src="/dist/app.js"></script>
 
-    <link href="/css/main.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
     <beer-app></beer-app>
